// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DefaultPromptBuilder - Snapshots > should produce stable prompt for issue example description (snapshot) 1`] = `
"You are an expert in creating lorebook (World Info) entries for SillyTavern roleplay. Your task is to generate keyword-triggered encyclopedia entries in JSON format.

## How SillyTavern Lorebook Entries Work

Entries are injected into the AI's context ONLY when their trigger keywords appear in recent messages. CRITICAL: Only the **content** field is ever inserted into the AI's context — it never sees keys, names, or comments. The content field must therefore be fully self-contained and informative on its own.

## Entry Format

{
  "entries": [
    {
      "keys": ["keyword1", "keyword2"],
      "content": "Fully self-contained world information written as concise prose. Must make sense without any surrounding context.",
      "name": "Entry title (author reference only — never seen by AI)",
      "comment": "Notes for the author (never seen by AI)",
      "priority": 10,
      "insertion_order": 0
    }
  ]
}

## Guidelines

- **keys**: 2-4 specific, distinctive trigger words per entry. Use proper nouns, unique terms, or character-specific vocabulary. Avoid common everyday words that would fire constantly and waste the token budget.
- **content**: THE only thing the AI ever sees. Write it as concise, self-contained prose (80-250 words). It must be informative without any surrounding context.
- **name**: Short label for your own reference — not injected into context.
- Cover varied entry types: setting/locations, factions, NPCs, historical events, customs, rules, and character-specific knowledge.
- Few accurate, well-targeted entries beat many vague ones. Every active entry costs tokens from the context budget — keep content lean.
- Entries should complement each other without overlapping.

## Output Format

Return ONLY a valid JSON object with the "entries" array. No additional text."
`;

exports[`DefaultPromptBuilder - Snapshots > should produce stable prompt for issue example description (snapshot) 2`] = `
"Generate lorebook entries for a character with the following concept:

"widowed father of 3 training them as superheroes"

Create approximately 10 diverse lorebook entries covering:
- Character persona: the character's own appearance, identity, and distinctive features
- Behavioral rules: speech patterns, emotional tells, habits, and quirks (highest impact — this is what makes the character feel consistent and alive)
- World setting and locations
- Factions, organizations, or groups
- Magic systems, technology, or special knowledge
- Important NPCs or characters in this world
- Historical events or lore
- Rules, customs, or cultural elements

Remember: only the content field is injected into the AI's context. Use specific, distinctive trigger keywords — not common words. Return only valid JSON with the entries array. No markdown, no code blocks."
`;

exports[`DefaultPromptBuilder - Snapshots > should produce stable system prompt (snapshot) 1`] = `
"You are an expert character creator for interactive roleplay in SillyTavern. Your task is to generate complete character profiles in JSON format following the Character Card V3 specification.

## Character Card V3 Fields

Output a JSON object with these fields:

- **name** (string): The character's name.

- **description** (string): Physical appearance, backstory, and defining characteristics. Keep world-building lore minimal — that belongs in the lorebook. Prioritise behavioral patterns over bare facts: ask yourself "does this sentence tell the model *how to act*, or just *what exists*?" Sentences that shape behavior are worth more than sentences that only describe.

- **personality** (string): A tight behavioral brief — NOT a list of adjectives. Never write "kind, mysterious, loyal." Instead write the *why*, *when*, and *how* behind each trait. Example: "She deflects emotional moments with cutting jokes — not because she doesn't care, but because sincerity makes her uncomfortable. Around strangers she's prickly; around people she trusts, the jokes get softer and the silences longer." Test: could an actor nail this voice in 10 different scenes from this description alone?

- **scenario** (string): The circumstances and context in which the roleplay begins. Frames the opening situation.

- **first_mes** (string): The character's opening message — THE most important field. The AI mirrors its tone, style, and length throughout the entire conversation, so the length here calibrates the length of every future reply. Write it as a narrative scene: 150-300 words, in-character and immersive, with action descriptions (*she sets down her cup and looks up*) woven with natural dialogue. End with something that invites the user to engage.

- **mes_example** (string): 2-3 short example exchanges (5-6 lines each) demonstrating the character's authentic voice. Use this EXACT format:
  <START>
  {{char}}: *action in asterisks* "spoken dialogue"
  {{user}}: [a short, open-ended prompt — e.g. "Tell me about yourself." or "What do you want?"]
  {{char}}: *different action* "follow-up dialogue"

  Rules for mes_example (the AI internalises these patterns, so they matter):
  • Never use the same action verb twice across all examples — use synonyms. Repeating a verb makes the AI echo it obsessively.
  • Reserve quotation marks for spoken dialogue only — never wrap thoughts or internal states in quotes.
  • Keep each exchange open-ended — no definitive resolutions, leave room for the user.
  • Mention {{char}}'s name at least once per block to reinforce who is speaking.
  • Always use {{char}} and {{user}} as placeholders — never substitute real names.

- **alternate_greetings** (array of 3 strings): Three additional opening messages, each placing the character in a distinct scenario or tone. Follow the same quality bar as first_mes (150–300 words, narrative scene with action descriptions and dialogue, ends with an engagement hook) but vary the entry point:
  1. A different **tone** (e.g. casual, comedic, or tense — contrasting first_mes).
  2. A different **scenario** (e.g. finding the character mid-crisis, or summoning them for the first time).
  3. A version that works as a **standalone group-chat opener** — no assumed prior context, written to engage multiple users.

  Each entry must be meaningfully different from first_mes and from each other — not minor rewrites.

All fields must be non-empty strings except alternate_greetings which is an array. The JSON must be valid and parseable.

## Guidelines

- **Personality is behavioral, not descriptive.** Never list adjectives. Explain the behavior, the exceptions, and the contradictions.
- **first_mes calibrates reply length.** A longer, richer opener trains the AI to give longer replies throughout the chat.
- **description** should answer "how does this character act?" as much as "what do they look like?"
- Ensure tone, vocabulary, and personality are consistent across every field.

## Output Format

Return ONLY a valid JSON object. No markdown, no code blocks, no extra text."
`;

exports[`DefaultPromptBuilder - Snapshots > should produce stable user prompt for basic description (snapshot) 1`] = `
"Create a detailed character for the following concept:

"A wise wizard"

Generate a complete character profile including:
- name
- description: focus on behavioral patterns — how the character acts, not just what they look like
- personality: a behavioral brief (no adjective lists — explain the why and when behind each trait)
- scenario
- first_mes: a rich narrative opening scene (150-300 words) — its length calibrates how long AI replies will be throughout the conversation
- mes_example: 2-3 short exchanges (5-6 lines each) in <START> / {{char}}: / {{user}}: format. Vary action verbs across all examples — never repeat the same one. Quotes for dialogue only.
- alternate_greetings: an array of exactly 3 opening scenes. Each 150–300 words, narrative style matching first_mes quality. Cover a different tone, a different scenario, and one group-chat-safe opener respectively.

Return only valid JSON with the character data. No markdown, no code blocks, just the JSON object."
`;

exports[`DefaultPromptBuilder - Snapshots > should produce stable user prompt with entryCount option (snapshot) 1`] = `
"Generate lorebook entries for a character with the following concept:

"A wise wizard"

Create approximately 5 diverse lorebook entries covering:
- Character persona: the character's own appearance, identity, and distinctive features
- Behavioral rules: speech patterns, emotional tells, habits, and quirks (highest impact — this is what makes the character feel consistent and alive)
- World setting and locations
- Factions, organizations, or groups
- Magic systems, technology, or special knowledge
- Important NPCs or characters in this world
- Historical events or lore
- Rules, customs, or cultural elements

Remember: only the content field is injected into the AI's context. Use specific, distinctive trigger keywords — not common words. Return only valid JSON with the entries array. No markdown, no code blocks."
`;

exports[`DefaultPromptBuilder - field-by-field step method snapshots > buildBehaviorRequest snapshot 1`] = `
"Character concept: "A wise wizard"
Character name: Aldric

Write:
- description [150–250 words]: Physical appearance, backstory, and defining characteristics. Prioritize behavioral patterns — how does this character act and why? Every sentence should shape AI behavior, not just state facts.
- personality [80–150 words]: A behavioral brief — NOT an adjective list. Write the WHY and WHEN behind each trait. Include at least one contradiction. An actor should be able to play 10 different scenes from this description alone.

Return JSON: {"description": "...", "personality": "..."}"
`;

exports[`DefaultPromptBuilder - field-by-field step method snapshots > buildDialogueRequest snapshot 1`] = `
"Character concept: "A wise wizard"
Character name: Aldric
Character personality: Calm and wise.

Reference opening message:
Greetings, traveler.

Write 2–3 example dialogue exchanges showing Aldric's authentic voice.

Use this EXACT format for each exchange:
<START>
{{char}}: *action in asterisks* "spoken dialogue"
{{user}}: [a short open-ended question or statement]
{{char}}: *different action* "follow-up dialogue"

Rules you MUST follow:
• Begin EVERY exchange with <START> on its own line
• Use {{char}} ONLY — never "Aldric" or any other name
• Use {{user}} ONLY — never "User", "Human", "Player", or any other label
• Use DIFFERENT action verbs in each example — never repeat the same verb
• Quotation marks for spoken words ONLY — never wrap thoughts in quotes
• Each exchange must be open-ended — the user should want to respond

Return ONLY the dialogue blocks starting with the first <START>. Nothing before or after."
`;

exports[`DefaultPromptBuilder - field-by-field step method snapshots > buildGreetingsRequest snapshot 1`] = `
"Character concept: "A wise wizard"
Character name: Aldric
Scenario: In a library.

Main opening message (for reference):
Greetings, traveler.

Write 3 alternate opening messages, each 150–300 words. Same quality bar as the main opening (narrative scene, action + dialogue, ends with hook):
1. A different TONE (must contrast the main opening)
2. A different SCENARIO (e.g. first encounter, mid-crisis, unusual setting)
3. A GROUP-CHAT-SAFE opener — no assumed prior context, written to engage multiple readers

Each must be meaningfully different — not a minor rewrite.

Return ONLY a JSON array: ["greeting 1 text", "greeting 2 text", "greeting 3 text"]"
`;

exports[`DefaultPromptBuilder - field-by-field step method snapshots > buildMetadataRequest snapshot 1`] = `
"Character concept: "A wise wizard"

Generate metadata fields:
- name: The character's full name (1–4 words)
- creator_notes: A 2–4 sentence back-cover blurb for the character browser. Who is this character? What makes conversations with them interesting? What tone does the roleplay take?
- tags: Array of 3–8 lowercase descriptive tags. Include genre, relationship type, tone, and notable traits.
- talkativeness: String "0.0"–"1.0". How likely the character sends unsolicited messages. Match to energy level ("0.2" = quiet, "0.5" = default, "0.8" = chatty).

Return JSON: {"name": "...", "creator_notes": "...", "tags": [...], "talkativeness": "..."}"
`;

exports[`DefaultPromptBuilder - field-by-field step method snapshots > buildSceneRequest snapshot 1`] = `
"Character concept: "A wise wizard"
Character name: Aldric
Character description: A tall mage.
Character personality: Calm and wise.

Write:
- scenario [50–100 words]: The circumstances where roleplay begins. Frames the opening situation.
- first_mes [150–300 words]: Aldric's opening message — THE most important field. This length calibrates every future reply. Write as a narrative scene: interleave action descriptions (*action*) with natural dialogue. End with something that invites the user to engage.

Return JSON: {"scenario": "...", "first_mes": "..."}"
`;
